# MYSPH

./: README.md
datagen/: datagen.py  settings.json
sph/: .clang-format  CMakeLists.txt
sph/SPH/: CMakeLists.txt
sph/SPH/CUDA/: CMakeLists.txt
sph/SPH/include/SPH/: Kernals.h  Mathematics.h  Structures.h
